Cambios en archivo package.json

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "react-vite-project",
   "private": true,
-  "homepage": "https://Briana2000.github.io/Plataforma-Ciberseguridad-TEC",
+  "homepage": "http://Briana2000.github.io/Plataforma-Ciberseguridad-TEC",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
