--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "react-vite-project",
   "private": true,
-  "homepage": "http://Briana2000.github.io/Plataforma-Ciberseguridad-TEC",
+  "homepage": "https://Briana2000.github.io/Plataforma-Ciberseguridad-TEC",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predeploy": "npm run build",
+    "predeploy": "npm run dist",
     "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
